fixed styling around service times; firefox didn't have margin above; line had too big a margin around

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -207,12 +207,8 @@ header{
 	}
 
 	.updates{
-		margin-top: 2%;
+		margin-top: 2em;
 		width: 50%;
-
-		div {
-			margin: 2% 0;
-		}
 
 /*
 		.events{
